[tool.poetry]
name = "oaspy-server"
version = "1.0.0"
description = "Python OpenAPI Specification server."
authors = ["Berislav Lopac <berislav@lopac.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://oaspy-server.readthedocs.io"
repository = "https://github.com/berislavlopac/oaspy-server"
packages = [
    { include = "oaspy/server/", from="src/" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
openapi-core = "^0.14.2"
starlette = "^0.19.0"
stringcase = "^1.2.0"

[tool.poetry.extras]
uvicorn = ["uvicorn"]

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.942"
mypy-extensions = "^0.4.3"
pytest-spec = "^3.2.0"
mkdocs = "^1.2.3"
Jinja2 = "<3.1"
tox-poetry = "^0.4.1"
tox = "^3.24.5"
isort = "^5.10.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = [ "src/oaspy/", ]
omit = [ "*/tests/*", "src/tests/*", ]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 90
exclude_lines = [ "pragma: no cover", "@abstract",]

[tool.black]
line-length = 96
target-version = ['py37', 'py38', 'py39']
verbose = false
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 96
filter_files = true
force_alphabetical_sort_within_sections = true

[tool.pydocstyle]
add-ignore = "D104, D107, D212, D401"
convention = "google"
match-dir = "^(?!tests|examples).*"

[tool.mypy]
mypy_path = "src/oaspy/"
ignore_missing_imports = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
